<resources>
    <string name="app_name">Pos</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome_title">Welcome to POS</string>
    <string name="welcome_text">Record and manage your customer leads whenever you get one</string>
    <string name="login">Sign In</string>
    <string name="logout">Logout</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="title_activity_pos">POS</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_delete_acticity">DeleteActicity</string>
    <string name="product">Select Product</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="customer_first_name">Customer First Name</string>
    <string name="customer_last_name">Customer Last Name</string>
    <string name="customer_id_number">Customer Id Number</string>
    <string name="customer_email">Customer Email</string>
    <string name="follow_up_date">Follow Up Date</string>
    <string name="customer_phone">Customer Phone Number</string>
    <string name="create_sale">Create Sale</string>
</resources>
