<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.pos.app.activity.NewSaleFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/product"
                android:inputType="textMultiLine">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/customerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="@string/customer_email"
                android:inputType="textMultiLine">
            </EditText>

            <EditText
                android:id="@+id/customerIdNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/customer_id_number"
                android:inputType="textMultiLine">
            </EditText>


            <EditText
                android:id="@+id/customerPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:ems="10"
                android:hint="@string/customer_phone"
                android:inputType="textMultiLine">
            </EditText>


            <EditText
                android:id="@+id/customerFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ems="10"
                android:hint="@string/customer_first_name"
                android:inputType="textMultiLine">
            </EditText>


            <EditText
                android:id="@+id/customerLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:ems="10"
                android:hint="@string/customer_last_name"
                android:inputType="textMultiLine">
            </EditText>


            <EditText
                android:id="@+id/followUpDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:ems="10"
                android:hint="@string/follow_up_date"
                android:inputType="textMultiLine">
            </EditText>
            <EditText
                android:id="@+id/latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:ems="10"
                android:hint="@string/latitude"
                android:inputType="textMultiLine">
            </EditText>
            <EditText
                android:id="@+id/longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:ems="10"
                android:hint="@string/longitude"
                android:inputType="textMultiLine">
            </EditText>


            <Button
                android:id="@+id/saveSaleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/create_sale" />
        </LinearLayout>

    </ScrollView>


</FrameLayout>
